# Egocentric-Spatial-Memory

./: README.md  README.md~  ROS_readme.txt  ROS_readme.txt~
ROSsimulation/src/worldDescription/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ROSsimulation/src/worldDescription/launch/: localMap.launch  localMap.launch~  localMap.luanch~  templaunch.launch~  worldlaunch.launch~  worldlaunchGAN.launch~  worldlaunchIROS.launch~
ROSsimulation/src/worldDescription/record/: rec_Bworld1.txt  rec_Bworld2.txt  rec_Bworld3.txt  rec_Bworld4.txt  rec_Bworld5.txt  rec_Bworld6.txt  rec_Bworld7.txt  rec_TBworld5.txt  rec_world1.txt~  rec_world11.txt  rec_world13.txt  rec_world15.txt  rec_world16.txt  rec_world17.txt  rec_world19.txt~  rec_world2.txt  rec_world22.txt  rec_world23.txt~  rec_world25.txt  rec_world26.txt  rec_world27.txt  rec_world7.txt~  rec_world9.txt  rec_worldTriplet.txt
ROSsimulation/src/worldDescription/rviz/: ros.rivz
ROSsimulation/src/worldDescription/src/: KeyboardControl.cpp  MoveRobot.cpp  MoveRobot.cpp~  TFpub.cpp  TFpub.cpp~  keyboardcontrol.cpp~
ROSsimulation/src/worldDescription/urdf/: myCylinder.urdf  myCylinder.urdf~  myCylinderGAN.urdf  myRobot.urdf~  temp.urdf~
ROSsimulation/src/worldDescription/world/: world10_num2.world~  world10_num3.world~  world10_num4.world~  world10_num5.world~  world10_num8.world~  world11_num2.world~  world11_num3.world~  world11_num4.world~  world11_num6.world~  world11_num8.world~  world11_num9.world~  world12_num1.world~  world12_num2.world~  world2wd.world
datalist/: IROSTransForm_0.mat  (+10 more)
(+122 files in other folders)
